fix body overflow-x on mobile

--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,4 @@
 body {
-    margin: 0;
     -webkit-animation-duration: 0.1s;
     -webkit-animation-name: fontfix;
     -webkit-animation-iteration-count: 1;
@@ -7,10 +6,17 @@ body {
     -webkit-animation-delay: 0.1s;
     -webkit-font-smoothing: antialiased;
 }
-
 body, html {
     height: 100%;
     /* letter-spacing: .01rem; */
+    width: 100%;
+    padding: 0 0 0 0;
+    margin: 0 0 0 0;
+    overflow-x: hidden;
+}
+
+#wrapper {
+    width:100%;
 }
 
 a {
@@ -132,6 +138,10 @@ h4 {
 b, strong {
     font-weight: normal;
 }
+header {
+    width: 100%;
+}
+
 header:before {
     content: '';
     width: 100%;
@@ -529,7 +539,7 @@ section.list ul li a .title:has(p) {
 /* TODO: check if I should eralse this */
 @media screen and (max-width: 767px) {
     section.list ul li a .title {
-        overflow: scroll;
+        /* overflow: scroll; */
    }
 }
 section.list ul li a .title h4 {
@@ -567,11 +577,11 @@ section.list ul li a .title p {
    }
 } */
 /* TODO: readd that if theres no p maybe? */
-@media screen and (max-width: 767px) {
-    section.list ul li a .title h4.overflow {
-        padding-right: 200px;
-   }
-}
+/* @media screen and (max-width: 767px) { */
+    /* section.list ul li a .title h4.overflow { */
+        /* padding-right: 200px; */
+   /* } */
+/* } */
 
 /* the dots to the left of the stuff */
 section.list ul li a .category {
